<!--Action Bar布局配置文件 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_read_remind"
        android:orderInCategory="100"
        android:title="@string/action_reminder"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_book"
        android:orderInCategory="100"
        android:title="@string/action_add"
        android:icon="@mipmap/ic_menu_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>